manifests/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: movies-frontend
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-frontend
  labels:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: movies-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: movies-frontend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: frontend
          image: ramiro/movies-frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 1
