manifests/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: movies
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: movies-api
              servicePort: 8080
          - path: /
            backend:
              serviceName: movies-frontend
              servicePort: 80
